<resources>
    <string name="app_name">InstaClone</string>
    <string name="enter_name">Kullanıcı Ad-Soyad</string>
    <string name="enter_email">Kullanıcı Email</string>
    <string name="enter_password">Kullanıcı Şifre</string>
    <string name="label_sign_up">Kullanıcı Kayıt</string>
    <string name="label_sign_in">Kullanıcı Giriş</string>
    <string name="btn_sign_up">Kaydol</string>
    <string name="btn_share">Paylaş</string>
    <string name="btn_new_sign_up">Yeni Üyelik</string>
    <string name="btn_login">Giriş Yap</string>

    <string name="txt_title">Hello Android Theme!</string>
</resources>