<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/label_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_name"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    "

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_up"
        android:textColor="@color/colorAccent" />

</LinearLayout>